# BoxARGaming

./: .gitignore  README.md  partitions.csv  sdkconfig.defaults
.claude/: settings.local.json
main/: CMakeLists.txt  config.h  main.c
main/audio/: audio_driver.h  audio_synth.c  audio_synth.h
main/camera/: camera_driver.c  camera_driver.h
main/detection/: detection_driver.cpp  detection_driver.h
main/display/: display_driver.cpp  display_driver.h
main/edge_detection/: edge_detection.c  edge_detection.h
main/fonts/: cjk_subset.h  generate_font.py
main/game/: game_render.c  game_render.h  particles.c  particles.h
main/image_processing/: image_processing.hpp
main/ipc/: ipc.c
main/physics/: marble_physics.c  marble_physics.h
main/pixel_game/: pixel_physics.c  pixel_sprite.c  pixel_sprite.h  pixel_world.c  pixel_world.h
main/source/: convert_png_to_rgb565.py
main/tasks/: audio_task.h  camera_task.h  display_task.h  imu_task.c  main_control_task.c  power_mgmt_task.c
main/track/: track_collision.c  track_collision.h
plan/: Audio_System_Summary-最终设计.md  ChipMusic_Audio_Design-方案.md  FreeRTOS_Task_Architecture.md  FreeRTOS多任务架构与低功耗启动方案.md  game_plan.md  缓存使用分析与优化建议.md  计划.md
plan/old/: 总体架构与开发路线.md  物理引擎模块实现方案.md  目标检测模块实现方案.md  相机模块实现方案.md
project/: .gitignore  game_plan.md
project/main/: CMakeLists.txt  config.h  idf_component.yml  main.c
project/main/audio/: audio_driver.c  audio_synth.c  bgm_data.h
project/main/camera/: camera_driver.c  camera_driver.h  ov5647_default.json
project/main/detection/: detection_driver.cpp  detection_driver.h
project/main/display/: display_driver.cpp  display_driver.h
project/main/game/: game_render.c  game_render.h
project/main/image_processing/: image_processing.cpp
project/main/imu/: imu_driver.c  imu_driver.h
project/main/ipc/: ipc.h
project/main/physics/: marble_physics.c
project/main/pixel_game/: pixel_physics.h  pixel_sprite.c  pixel_sprite.h  pixel_world.c  pixel_world.h
project/main/source/: png_assets.h
project/main/tasks/: audio_task.c  camera_task.c  display_task.c  imu_task.h  main_control_task.c  main_control_task.h  power_mgmt_task.c  power_mgmt_task.h
project/main/track/: track_collision.h
project/plan/: ESP32-P4处理器架构说明.md  IMU模块实现方案.md  游戏地图与渲染模块实现方案.md  游戏管理模块实现方案.md  编译与配置指南.md
