idf_component_register(SRCS "main.c"
                         "camera/camera_driver.c"
                         "detection/detection_driver.cpp"
                         "display/display_driver.cpp"
                         "image_processing/image_processing.cpp"
                         "edge_detection/edge_detection.c"
                         "imu/imu_driver.c"
                         "physics/marble_physics.c"
                         "track/track_collision.c"
                         "game/game_render.c"
                    INCLUDE_DIRS "."
                                 "camera"
                                 "detection"
                                 "display"
                                 "image_processing"
                                 "edge_detection"
                                 "imu"
                                 "physics"
                                 "track"
                                 "game"
                    REQUIRES esp_video coco_detect)
