idf_component_register(SRCS "main.c"
	                         "ipc/ipc.c"
	                         "tasks/camera_task.c"
	                         "tasks/display_task.c"
	                         "tasks/imu_task.c"
	                         "tasks/main_control_task.c"
	                         "tasks/power_mgmt_task.c"
	                         "camera/camera_driver.c"
	                         "detection/detection_driver.cpp"
	                         "display/display_driver.cpp"
	                         "image_processing/image_processing.cpp"
	                         "edge_detection/edge_detection.c"
	                         "imu/imu_driver.c"
	                         "physics/marble_physics.c"
	                         "track/track_collision.c"
	                         "game/game_render.c"
	                         "pixel_game/pixel_world.c"
	                         "pixel_game/pixel_sprite.c"
	                         "pixel_game/pixel_physics.c"
                         "audio/audio_driver.c"
                         "audio/audio_synth.c"
                         "tasks/audio_task.c"
	                    INCLUDE_DIRS "."
	                                 "ipc"
	                                 "tasks"
	                                 "camera"
	                                 "detection"
	                                 "display"
	                                 "image_processing"
	                                 "edge_detection"
	                                 "imu"
	                                 "physics"
	                                 "track"
	                                 "game"
	                                 "pixel_game"
	                    REQUIRES esp_video coco_detect)
